src/test/contracts/negative/error_messages/let_vbar.religo
let a = (b: unit) => {
    let 222 = 222;
}